--- a/EcoCareApp/EcoCareApp/Views/Tryouts.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Tryouts.xaml
@@ -1,71 +1,55 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="EcoCareApp.Views.Tryouts"
-             >
-    <ContentPage.Content>
-        <Grid Style="{StaticResource SignUpG}" >
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <!--Image-->
-                <RowDefinition></RowDefinition>
-                <!--Div-->
-            </Grid.RowDefinitions>
-            <Grid Padding="0">
-                <Image Source="images/sign_up.jpg" Aspect="AspectFill"/>
-                <!--Image-->
-            </Grid>
-            <Grid Style="{StaticResource logInSignUpDivG}" >
+             xmlns:models="clr-namespace:EcoCareApp.Models"
+             x:Class="EcoCareApp.Views.Products"
+             xmlns:syncfusion="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms" xmlns:data="clr-namespace:Syncfusion.DataSource;assembly=Syncfusion.DataSource.Portable" xmlns:viewmodels="clr-namespace:EcoCareApp.ViewModels" x:DataType="viewmodels:ProductsViewModel">
+    <ContentView.Content>
+        <StackLayout>
+
+            <Grid>
+
                 <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <Frame Grid.Row="2" Style="{StaticResource logInSignUp}" >
-                    <!--Div/Box-->
-                    <Grid Padding="0" >
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                            <!--Back Button-->
-                        </Grid.RowDefinitions>
-                        <Label Text="Welcome To Llama Alone, Let's Sign You Up" Grid.ColumnSpan="2" Style="{StaticResource smallerTitle}"/>
-                        <!--Title-->
-                        <Label Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource link}">
-                            <Label.FormattedText>
-                                <FormattedString>
-                                    <Span Text="Already One Of Us? " Style="{StaticResource linkPartA}"></Span>
-                                    <Span Text="Log In" Style="{StaticResource linkPartB}">
-                                        <Span.GestureRecognizers>
-                                            <TapGestureRecognizer Command="{Binding MoveToLogIn}"></TapGestureRecognizer>
-                                        </Span.GestureRecognizers>
-                                    </Span>
-                                </FormattedString>
-                            </Label.FormattedText>
-                        </Label>
-                        <!--Go to logIn-->
-                        <Entry Placeholder="First Name" Grid.Row="2" Style="{StaticResource entry}" Text="{Binding FirstName}" Keyboard="Text"/>
-                        <!--First Name-->
-                        <Entry Placeholder="Last Name" Grid.Row="2" Grid.Column="1" Style="{StaticResource entry}" Text="{Binding LastName}" Keyboard="Text"/>
-                        <!--Last Name-->
-                        <Entry Placeholder="UserName" Grid.Row="3" Grid.ColumnSpan="2" Style="{StaticResource entry}" Text="{Binding UserName}"/>
-                        <!--UserName-->
-                        <Entry Placeholder="Password" Grid.Row="4" Grid.ColumnSpan="2" IsPassword="True" Style="{StaticResource entry}" Text="{Binding Pass}"/>
-                        <!--Password-->
-                        <Entry Placeholder="Mail" Grid.Row="5" Grid.ColumnSpan="2" Style="{StaticResource entry}" Text="{Binding UserMail}" Keyboard="Email"/>
-                        <!--User Mail-->
-                        <Button Text="Continue" Grid.Row="6" Grid.ColumnSpan="2" Command="{Binding ContinueToAdvancedSignUp}"/>
-                        <!--To Advanced Sign Up - Button-->
-                    </Grid>
-                </Frame>
+                <SearchBar x:Name="filterText" HeightRequest="40"
+           Placeholder="Search here to filter" Text="{Binding SearchTerm}" Grid.Row="0"/>
             </Grid>
-        </Grid>
-    </ContentPage.Content>
-</ContentPage>
+            <Grid>
+
+                <syncfusion:SfListView x:Name="listView" 
+                                ItemsSource="{Binding FilteredProducts}" 
+                                   ItemSize="100" 
+                 SelectionMode="Single"
+                 SelectionGesture="Tap"
+                 SelectionBackgroundColor="#E4E4E4">
+                    <syncfusion:SfListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:Product">
+                            <Grid Padding="10">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="0.4*" />
+                                    <RowDefinition Height="0.6*" />
+                                </Grid.RowDefinitions>
+
+                                <Label Text="{Binding Title}" FontAttributes="Bold" TextColor="Teal" FontSize="21" />
+                                <Label Grid.Row="1" Text="{Binding Description}" TextColor="Teal" FontSize="15"/>
+                            </Grid>
+                        </DataTemplate>
+
+                    </syncfusion:SfListView.ItemTemplate>
+                    <syncfusion:SfListView.DataSource>
+                        <data:DataSource>
+                            <data:DataSource.SortDescriptors>
+                                <data:SortDescriptor PropertyName="Title" Direction="Ascending"/>
+                            </data:DataSource.SortDescriptors>
+                        </data:DataSource>
+                    </syncfusion:SfListView.DataSource>
+                    <syncfusion:SfListView.LayoutManager>
+                        <syncfusion:GridLayout SpanCount="3" />
+                    </syncfusion:SfListView.LayoutManager>
+                </syncfusion:SfListView>
+            </Grid>
+        </StackLayout>
+    </ContentView.Content>
+</ContentView>
