--- a/EcoCareApp/EcoCareApp/Views/Home.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Home.xaml
@@ -7,7 +7,7 @@
              xmlns:slider="clr-namespace:Syncfusion.SfRangeSlider.XForms;assembly=Syncfusion.SfRangeSlider.XForms"
 
              xmlns:radialMenu="clr-namespace:Syncfusion.SfRadialMenu.XForms;assembly=Syncfusion.SfRadialMenu.XForms" xmlns:viewmodels="clr-namespace:EcoCareApp.ViewModels" x:DataType="viewmodels:HomeViewModel"
-              BackgroundColor="White">
+              BackgroundColor="White" NavigationPage.HasBackButton="False" >
 
     <!--  <div>Icons made by
                            <a href="https://www.flaticon.com/authors/ilham-fitrotul-hayat" title="Ilham Fitrotul Hayat">Ilham Fitrotul Hayat</a> from
