--- a/EcoCareApp/EcoCareApp/Views/LogIn.xaml
+++ b/EcoCareApp/EcoCareApp/Views/LogIn.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:EcoCareApp.ViewModels"
 
-             x:Class="EcoCareApp.Views.LogIn">
+             x:Class="EcoCareApp.Views.LogIn" 
+>
     <ContentPage.Content>
 
         <Grid Style="{StaticResource logInG}">
