--- a/EcoCareApp/EcoCareApp/App.xaml
+++ b/EcoCareApp/EcoCareApp/App.xaml
@@ -250,3 +250,5 @@
         </ResourceDictionary>
     </Application.Resources>
 </Application>
+<!-- <a href="https://www.flaticon.com/free-icons/edit" title="edit icons">Edit icons created by Kiranshastry - Flaticon
+    </a> -->
