--- a/EcoCareApp/EcoCareApp/Views/RegisterOwner.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterOwner.xaml
@@ -63,7 +63,7 @@
                                 <Label Grid.Row="5" Text="User Name"  Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding UserNameTyped}"/>
                                 <Label Grid.Row="5" Text="{Binding UserNameError}" IsVisible="{Binding ShowUserNameError}"  Style="{StaticResource labelErrorStyle}"/>
-                         <Entry Grid.Row="6" Placeholder="Type a usrname" Text="{Binding UserName}" Style="{StaticResource entry}"/>
+                         <Entry Grid.Row="6" Placeholder="Type a username" Text="{Binding UserName}" Style="{StaticResource entry}"/>
 
                             <Label Text="Email" Grid.Row="7" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding EmailTyped}"/>
