--- a/EcoCareApp/EcoCareApp/Views/EditProduct.xaml
+++ b/EcoCareApp/EcoCareApp/Views/EditProduct.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodels="clr-namespace:EcoCareApp.ViewModels" x:DataType="viewmodels:EditProductViewModel"
              x:Class="EcoCareApp.Views.EditProduct">
     <ContentPage.Content>
         <StackLayout>
@@ -11,11 +11,11 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
                     <Label Text="Title:" Grid.Row="0" Grid.Column="0" Style="{StaticResource labelNameStyle}"/>
@@ -32,9 +32,9 @@
                     <Label Text="{Binding Description}" HorizontalTextAlignment="Center" FontSize="Body"
                            Grid.Row="2" Grid.Column="1"/>
 
-                    <Button x:Name="save" Text="Get Barcode for the benefit!" 
+                    <Button x:Name="save" Text="Save Changes!" 
                VerticalOptions="Start" HorizontalOptions="FillAndExpand"
-                Command="{Binding SaveChanges}" Grid.Row="3" Grid.ColumnSpan="2"/>
+                Command="{Binding Update}" Grid.Row="3" Grid.ColumnSpan="2"/>
                 </Grid>
 
             </ScrollView>
