--- a/EcoCareApp/EcoCareApp/Views/ProductPage.xaml
+++ b/EcoCareApp/EcoCareApp/Views/ProductPage.xaml
@@ -2,29 +2,67 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="EcoCareApp.Views.ProductPage" Padding="0,40,0,0"
-             xmlns:sfPopup="clr-namespace:Syncfusion.XForms.PopupLayout;assembly=Syncfusion.SfPopupLayout.XForms">
-    <ContentPage.Content>
-        
-        
-                    <ScrollView>
-                        <StackLayout>
-                            <Label Text="{Binding Price, StringFormat='{0:f0}★'}" HorizontalTextAlignment="Center" FontSize="Caption" HorizontalOptions="End"/>
+             xmlns:sfPopup="clr-namespace:Syncfusion.XForms.PopupLayout;assembly=Syncfusion.SfPopupLayout.XForms" xmlns:viewmodels="clr-namespace:EcoCareApp.ViewModels" x:DataType="viewmodels:ProductPageViewModel">
 
-                            <Label Text="{Binding Title}" HorizontalTextAlignment="Center" FontSize="Large"/>
-                            <Image Source="{Binding ImageSource}" WidthRequest="400" HeightRequest="400"/>
-                            <Label Text="{Binding Description}" HorizontalTextAlignment="Center" FontSize="Body"/>
-                            <Label Text="{Binding SellersUsername}" HorizontalTextAlignment="Center" FontSize="Caption"/>
+    <sfPopup:SfPopupLayout x:Name="barcodePopup">
+        
+        <sfPopup:SfPopupLayout.Content>
+            <StackLayout x:Name="mainLayout">
 
-                            <Button x:Name="showBarode" Text="Get Barcode for the benefit!"
-                                    VerticalOptions="Start" HorizontalOptions="FillAndExpand" 
-                                    Command="{Binding OpenPopUpPage}"
+                <ScrollView>
+                    <StackLayout>
+                        <Label Text="{Binding Price, StringFormat='{0:f0}★'}" HorizontalTextAlignment="Center" FontSize="Caption" HorizontalOptions="End"/>
+
+                        <Label Text="{Binding Title}" HorizontalTextAlignment="Center" FontSize="Large"/>
+                        <Image Source="{Binding ImageSource}" WidthRequest="400" HeightRequest="400"/>
+                        <Label Text="{Binding Description}" HorizontalTextAlignment="Center" FontSize="Body"/>
+                        <Label Text="{Binding SellersUsername}" HorizontalTextAlignment="Center" FontSize="Caption"/>
+
+                        <Button x:Name="showBarode" Text="Get Barcode for the benefit!"
+                                    VerticalOptions="Start" HorizontalOptions="FillAndExpand"
+                                Clicked="showBarode_Clicked"
                                 />
-                        </StackLayout>
+                    </StackLayout>
 
-                    </ScrollView>
-              
+                </ScrollView>
 
-      
-                
-    </ContentPage.Content>
+
+            </StackLayout>
+        </sfPopup:SfPopupLayout.Content>
+
+
+        <sfPopup:PopupView AppearanceMode="OneButton" ShowCloseButton="True" x:Name="PopUpItself">
+            <sfPopup:PopupView.HeaderTemplate>
+                <DataTemplate>
+                    <Label Text="Customized Header" 
+                               FontAttributes="Bold"
+                               BackgroundColor="Blue"
+                               FontSize="16"
+                               HorizontalTextAlignment="Center"
+                               VerticalTextAlignment="Center"
+                               />
+                </DataTemplate>
+            </sfPopup:PopupView.HeaderTemplate>
+            <sfPopup:PopupView.FooterTemplate>
+                <DataTemplate>
+                    <Label Text="Customized Footer" 
+                               FontAttributes="Bold"
+                               BackgroundColor="Blue"
+                               FontSize="16"
+                               HorizontalTextAlignment="Center"
+                               VerticalTextAlignment="Center"
+                               />
+                </DataTemplate>
+            </sfPopup:PopupView.FooterTemplate>
+            <sfPopup:PopupView.ContentTemplate>
+                <DataTemplate>
+                    <Label Text="This sould be barcode" BackgroundColor="SkyBlue"
+                           HorizontalTextAlignment="Center"/>
+                </DataTemplate>
+            </sfPopup:PopupView.ContentTemplate>
+        </sfPopup:PopupView>
+
+    </sfPopup:SfPopupLayout>
+
+
 </ContentPage>
